--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     <section id="about">
         <div class="container">
-            <h2 class="section-heading">About</h2>
+            <h2 class="section-heading">About Me</h2>
             <p class="section-intro">Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit
             </p>
             <div class="about-parent">
