--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="container">
             <div class="hero">
                 <div class="left">
-                    <h1>Elegant and creative<br /> solutions</h1>
+                    <h1>Elegant and creative<br /> solutions updated</h1>
                     <p>We are team of talented designers making websites with Bootstrap</p>
                     <div class="ctas">
                         <a href="#" class="greenBtn">Get Started</a>
